# cosmos-ui-leptos

./: .gitignore  Cargo.toml  README.md  build.mjs  bundle.js  index.html  lib.js  package-lock.json  package.json
src/: cosmos.rs  main.rs
